--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ < Letter for You  Naile Gülgen > ♡</p>
+      <p>♡ < Letter for You N > ♡</p>
     </div>
 
     <!-- Letter Screen -->
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Zoom Meet with Movie Night! Online
+          <strong>Valentine Date:</strong> Zoom Meet with Movie Night!
         </p>
       </div>
     </div>
